--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-handlebars": "^7.1.2",
     "nodemailer": "^6.9.4",
     "nodemailer-express-handlebars": "^6.1.0",
     "path": "^0.12.7"
